# chain-scraper

./: .env  Cargo.toml  README.md  docker-compose_db.yml  docker-compose_elk.yml  docker-compose_mongo.yml  remove.sh  resume.sh  run.sh
config/: log4rs.yml
src/: main.rs  stream.rs
src/db/: mod.rs  schema.rs
src/db/model/: block.rs  contract.rs  mod.rs  transaction.rs
src/error/: mod.rs
src/es/: mod.rs  transaction.rs
src/es/model/: mod.rs
src/live/: mod.rs
src/mongo/: mod.rs
src/mongo/model/: mod.rs
src/parse/: contract_abi.rs  input_data.rs  mod.rs  trx.rs
src/traversal/: batch.rs  connection.rs  http.rs  mod.rs
src/traversal/model/: mod.rs
src/web/: server.rs
